[project]
name = "fastapi-i18n-demo"
version = "0.1.0"
description = "FastAPI i18n demo with Babel, pluralization, datetime, currency, and locale detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "babel>=2.14.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]
